Tighten async feedback scheduling cleanup