@@ -6,23 +6,31 @@ import net.minecraft.entity.mob.MobEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.particle.ParticleEffect;
 import net.minecraft.particle.ParticleTypes;
+import net.minecraft.registry.RegistryKey;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.sound.SoundCategory;
 import net.minecraft.sound.SoundEvents;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.MathHelper;
 import net.minecraft.util.math.Vec3d;
+import net.minecraft.world.World;
 import woflo.petsplus.api.registry.PetRoleType;
 import woflo.petsplus.api.registry.PetsPlusRegistries;
 import woflo.petsplus.state.PetComponent;
 import woflo.petsplus.events.TributeHandler;
 
+import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.*;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.ScheduledFuture;
+import java.util.concurrent.ScheduledThreadPoolExecutor;
+import java.util.concurrent.ThreadFactory;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import org.jetbrains.annotations.Nullable;
 
 /**
  * Centralized feedback system for visual and audio effects throughout the mod.
@@ -33,23 +41,38 @@ public class FeedbackManager {
     private static final int AMBIENT_PARTICLE_INTERVAL = 80; // 4 seconds
     // Debounce map: last emit tick per source key (debounce)
     private static final ConcurrentHashMap<Object, Long> LAST_EMIT_TICK = new ConcurrentHashMap<>();
-    private static final ScheduledExecutorService FEEDBACK_EXECUTOR = Executors.newSingleThreadScheduledExecutor(r -> {
-        Thread thread = new Thread(r, "PetsPlus-Feedback");
-        thread.setDaemon(true);
-        return thread;
-    });
-    
-    // Track pending tasks for proper cleanup
-    private static final Map<String, ScheduledFuture<?>> PENDING_TASKS = new ConcurrentHashMap<>();
-    private static final AtomicLong TASK_ID_GENERATOR = new AtomicLong(0);
+    private static final Set<ScheduledFuture<?>> PENDING_TASKS = ConcurrentHashMap.newKeySet();
     private static final AtomicBoolean IS_SHUTTING_DOWN = new AtomicBoolean(false);
-    
+    private static final Object EXECUTOR_LOCK = new Object();
+    private static ScheduledThreadPoolExecutor feedbackExecutor = createExecutor();
+
     // Static initialization block with shutdown hook registration
     static {
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-            IS_SHUTTING_DOWN.set(true);
-            cleanup();
-        }, "PetsPlus-FeedbackShutdownHook"));
+        Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().name("PetsPlus-FeedbackShutdownHook").unstarted(FeedbackManager::cleanup));
+    }
+
+    private static ScheduledThreadPoolExecutor createExecutor() {
+        ThreadFactory factory = Thread.ofVirtual().name("PetsPlus-Feedback-", 1).factory();
+        ScheduledThreadPoolExecutor executor = new ScheduledThreadPoolExecutor(1, factory);
+        executor.setRemoveOnCancelPolicy(true);
+        executor.setExecuteExistingDelayedTasksAfterShutdownPolicy(false);
+        executor.setContinueExistingPeriodicTasksAfterShutdownPolicy(false);
+        return executor;
+    }
+
+    private static ScheduledThreadPoolExecutor ensureExecutor() {
+        ScheduledThreadPoolExecutor executor = feedbackExecutor;
+        if (executor == null || executor.isShutdown()) {
+            synchronized (EXECUTOR_LOCK) {
+                executor = feedbackExecutor;
+                if (executor == null || executor.isShutdown()) {
+                    feedbackExecutor = createExecutor();
+                    executor = feedbackExecutor;
+                    IS_SHUTTING_DOWN.set(false);
+                }
+            }
+        }
+        return executor;
     }
 
     /**
@@ -64,7 +87,7 @@ public class FeedbackManager {
      * Emit feedback for a specific event at a specific location.
      */
     public static void emitFeedback(String eventName, Vec3d position, ServerWorld world, Entity sourceEntity) {
-        if (world == null || world.isClient()) return;
+        if (world == null || world.isClient() || position == null) return;
         var effect = FeedbackConfig.getFeedback(eventName);
         if (effect == null) return;
 
@@ -82,7 +105,7 @@ public class FeedbackManager {
         }
         LAST_EMIT_TICK.put(key, now);
 
-        if (effect.delayTicks > 0) {
+        if (effect.delayTicks() > 0) {
             scheduleDelayedFeedback(effect, position, world, sourceEntity);
         } else {
             runImmediateFeedback(effect, position, world, sourceEntity);
@@ -92,60 +115,56 @@ public class FeedbackManager {
     private static void runImmediateFeedback(FeedbackConfig.FeedbackEffect effect, Vec3d position,
                                              ServerWorld world, Entity sourceEntity) {
         if (effect == null || world == null || world.isClient() || position == null) return;
-        var server = world.getServer();
-        if (server != null && !server.isOnThread()) {
-            UUID sourceUuid = sourceEntity != null ? sourceEntity.getUuid() : null;
-            server.execute(() -> executeImmediateFeedback(effect, position, world, resolveEntity(world, sourceUuid)));
+        MinecraftServer server = world.getServer();
+        if (server == null) {
             return;
         }
-
-        executeImmediateFeedback(effect, position, world, sourceEntity);
+        FeedbackInvocation invocation = FeedbackInvocation.from(effect, position, world, sourceEntity);
+        if (!server.isOnThread()) {
+            server.execute(() -> invocation.dispatch(server));
+            return;
+        }
+        invocation.dispatch(server);
     }
 
     private static void scheduleDelayedFeedback(FeedbackConfig.FeedbackEffect effect, Vec3d position,
                                                 ServerWorld world, Entity sourceEntity) {
         if (effect == null || position == null || world == null || world.isClient()) return;
-        var server = world.getServer();
+        MinecraftServer server = world.getServer();
         if (server == null || IS_SHUTTING_DOWN.get()) {
             return;
         }
 
-        UUID sourceUuid = sourceEntity != null ? sourceEntity.getUuid() : null;
-        long delayTicks = Math.max(1, effect.delayTicks);
-        
-        // Generate unique task ID for tracking
-        String taskId = "feedback_" + TASK_ID_GENERATOR.incrementAndGet();
-        
-        try {
-            ScheduledFuture<?> future = FEEDBACK_EXECUTOR.schedule(() -> {
-                // Double-check server state before executing
+        FeedbackInvocation invocation = FeedbackInvocation.from(effect, position, world, sourceEntity);
+        long delayTicks = Math.max(1, effect.delayTicks());
+
+        ScheduledThreadPoolExecutor executor = ensureExecutor();
+        final ScheduledFuture<?>[] handle = new ScheduledFuture<?>[1];
+        Runnable task = () -> {
+            try {
                 if (IS_SHUTTING_DOWN.get() || server.isStopped()) {
                     return;
                 }
-                
-                UUID uuidCopy = sourceUuid;
                 server.execute(() -> {
-                    // Final check before executing on server thread
                     if (!IS_SHUTTING_DOWN.get() && !server.isStopped()) {
-                        Entity resolvedSource = resolveEntity(world, uuidCopy);
-                        executeImmediateFeedback(effect, position, world, resolvedSource);
+                        invocation.dispatch(server);
                     }
                 });
-                
-                // Remove task from tracking map after execution
-                PENDING_TASKS.remove(taskId);
-            }, delayTicks * 50L, TimeUnit.MILLISECONDS);
-            
-            // Track the task for potential cancellation
-            PENDING_TASKS.put(taskId, future);
+            } finally {
+                ScheduledFuture<?> scheduled = handle[0];
+                if (scheduled != null) {
+                    PENDING_TASKS.remove(scheduled);
+                }
+            }
+        };
+
+        try {
+            handle[0] = executor.schedule(task, delayTicks * 50L, TimeUnit.MILLISECONDS);
+            PENDING_TASKS.add(handle[0]);
         } catch (RejectedExecutionException e) {
             // Handle executor shutdown case gracefully
             // Avoid noisy stderr; rely on server log if needed
         }
-    }
-
-    private static Entity resolveEntity(ServerWorld world, UUID uuid) {
-        return uuid != null ? world.getEntity(uuid) : null;
     }
 
     /**
@@ -218,10 +237,10 @@ public class FeedbackManager {
         // Emit particles with per-call total budget clamp (budget)
         final int MAX_BUDGET = 48;
         int totalPlanned = 0;
-        if (effect.particles != null) {
-            for (var pc : effect.particles) {
+        if (effect.particles() != null) {
+            for (var pc : effect.particles()) {
                 if (pc != null) {
-                    totalPlanned += Math.max(0, pc.count);
+                    totalPlanned += Math.max(0, pc.count());
                 }
             }
         }
@@ -230,13 +249,13 @@ public class FeedbackManager {
             scale = (float) MAX_BUDGET / (float) totalPlanned;
         }
         int spent = 0;
-        if (effect.particles != null) {
-            for (var particleConfig : effect.particles) {
+        if (effect.particles() != null) {
+            for (var particleConfig : effect.particles()) {
                 if (particleConfig == null) continue;
                 // Scale count proportionally, ensure at least 1 if originally >0 and budget remains
-                int scaled = particleConfig.count;
+                int scaled = particleConfig.count();
                 if (scale < 1.0f) {
-                    scaled = Math.max(1, Math.round(particleConfig.count * scale));
+                    scaled = Math.max(1, Math.round(particleConfig.count() * scale));
                 }
                 int remaining = MAX_BUDGET - spent;
                 if (remaining <= 0) break;
@@ -249,10 +268,10 @@ public class FeedbackManager {
         }
 
         // Play audio
-        if (effect.audio != null) {
+        if (effect.audio() != null) {
             world.playSound(null, position.x, position.y, position.z,
-                          effect.audio.sound, SoundCategory.NEUTRAL,
-                          effect.audio.volume, effect.audio.pitch);
+                          effect.audio().sound(), SoundCategory.NEUTRAL,
+                          effect.audio().volume(), effect.audio().pitch());
         }
     }
 
@@ -261,31 +280,31 @@ public class FeedbackManager {
                                                     Vec3d position, ServerWorld world, Entity sourceEntity) {
         if (config == null || world == null || world.isClient() || position == null) return;
         double entitySizeMultiplier = 1.0;
-        if (config.adaptToEntitySize && sourceEntity != null) {
+        if (config.adaptToEntitySize() && sourceEntity != null) {
             entitySizeMultiplier = Math.max(0.5, Math.min(2.0, sourceEntity.getWidth()));
         }
-        double effectiveRadius = config.radius * entitySizeMultiplier;
+        double effectiveRadius = config.radius() * entitySizeMultiplier;
         // Dispatch based on pattern, mirroring emitParticlePattern but using overrideCount
-        switch (config.pattern.toLowerCase()) {
+        switch (config.pattern().toLowerCase()) {
             case "circle" -> {
                 for (int i = 0; i < overrideCount; i++) {
                     double angle = (i / (double) Math.max(1, overrideCount)) * 2 * Math.PI;
                     double x = position.x + Math.cos(angle) * effectiveRadius;
                     double z = position.z + Math.sin(angle) * effectiveRadius;
-                    world.spawnParticles(config.type, x, position.y + config.offsetY, z,
-                            1, config.offsetX, 0, config.offsetZ, config.speed);
+                    world.spawnParticles(config.type(), x, position.y + config.offsetY(), z,
+                            1, config.offsetX(), 0, config.offsetZ(), config.speed());
                 }
             }
             case "burst" -> {
-                world.spawnParticles(config.type, position.x, position.y + config.offsetY, position.z,
-                        overrideCount, config.offsetX, config.offsetY, config.offsetZ, config.speed);
+                world.spawnParticles(config.type(), position.x, position.y + config.offsetY(), position.z,
+                        overrideCount, config.offsetX(), config.offsetY(), config.offsetZ(), config.speed());
             }
             case "line" -> {
                 for (int i = 0; i < overrideCount; i++) {
                     double progress = overrideCount == 1 ? 0.5 : i / (double) (overrideCount - 1);
                     double x = position.x + (progress - 0.5) * effectiveRadius;
-                    world.spawnParticles(config.type, x, position.y + config.offsetY, position.z,
-                            1, config.offsetX, 0, config.offsetZ, config.speed);
+                    world.spawnParticles(config.type(), x, position.y + config.offsetY(), position.z,
+                            1, config.offsetX(), 0, config.offsetZ(), config.speed());
                 }
             }
             case "area" -> {
@@ -294,8 +313,8 @@ public class FeedbackManager {
                     double r = world.getRandom().nextDouble() * effectiveRadius;
                     double x = position.x + Math.cos(angle) * r;
                     double z = position.z + Math.sin(angle) * r;
-                    world.spawnParticles(config.type, x, position.y + config.offsetY, z,
-                            1, config.offsetX, config.offsetY / 2, config.offsetZ, config.speed);
+                    world.spawnParticles(config.type(), x, position.y + config.offsetY(), z,
+                            1, config.offsetX(), config.offsetY() / 2, config.offsetZ(), config.speed());
                 }
             }
             case "spiral" -> {
@@ -304,40 +323,40 @@ public class FeedbackManager {
                     double angle = time + (i * Math.PI * 2 / Math.max(1, overrideCount));
                     double x = position.x + Math.cos(angle) * effectiveRadius;
                     double z = position.z + Math.sin(angle) * effectiveRadius;
-                    double y = position.y + config.offsetY + Math.sin(angle) * 0.1;
-                    world.spawnParticles(config.type, x, y, z,
-                            1, config.offsetX, 0, config.offsetZ, config.speed);
+                    double y = position.y + config.offsetY() + Math.sin(angle) * 0.1;
+                    world.spawnParticles(config.type(), x, y, z,
+                            1, config.offsetX(), 0, config.offsetZ(), config.speed());
                 }
             }
             case "upward" -> {
                 for (int i = 0; i < overrideCount; i++) {
-                    double offsetX = (world.getRandom().nextDouble() - 0.5) * config.offsetX * 2;
-                    double offsetZ = (world.getRandom().nextDouble() - 0.5) * config.offsetZ * 2;
-                    world.spawnParticles(config.type,
+                    double offsetX = (world.getRandom().nextDouble() - 0.5) * config.offsetX() * 2;
+                    double offsetZ = (world.getRandom().nextDouble() - 0.5) * config.offsetZ() * 2;
+                    world.spawnParticles(config.type(),
                             position.x + offsetX, position.y - 0.2, position.z + offsetZ,
-                            1, config.offsetX, 0.0, config.offsetZ, config.speed);
+                            1, config.offsetX(), 0.0, config.offsetZ(), config.speed());
                 }
             }
             case "plus" -> {
                 double size = effectiveRadius;
-                world.spawnParticles(config.type, position.x - size/2, position.y + config.offsetY, position.z,
-                        1, config.offsetX, 0, config.offsetZ, config.speed);
-                world.spawnParticles(config.type, position.x + size/2, position.y + config.offsetY, position.z,
-                        1, config.offsetX, 0, config.offsetZ, config.speed);
-                world.spawnParticles(config.type, position.x, position.y + config.offsetY, position.z - size/2,
-                        1, config.offsetX, 0, config.offsetZ, config.speed);
-                world.spawnParticles(config.type, position.x, position.y + config.offsetY, position.z + size/2,
-                        1, config.offsetX, 0, config.offsetZ, config.speed);
+                world.spawnParticles(config.type(), position.x - size/2, position.y + config.offsetY(), position.z,
+                        1, config.offsetX(), 0, config.offsetZ(), config.speed());
+                world.spawnParticles(config.type(), position.x + size/2, position.y + config.offsetY(), position.z,
+                        1, config.offsetX(), 0, config.offsetZ(), config.speed());
+                world.spawnParticles(config.type(), position.x, position.y + config.offsetY(), position.z - size/2,
+                        1, config.offsetX(), 0, config.offsetZ(), config.speed());
+                world.spawnParticles(config.type(), position.x, position.y + config.offsetY(), position.z + size/2,
+                        1, config.offsetX(), 0, config.offsetZ(), config.speed());
             }
             case "z_pattern" -> {
                 double time = world.getTime() * 0.05;
                 for (int i = 0; i < overrideCount; i++) {
                     double progress = (i / (double) Math.max(1, overrideCount) + time) % 1.0;
                     double x = position.x + (progress - 0.5) * effectiveRadius;
-                    double y = position.y + config.offsetY + Math.sin(progress * Math.PI) * 0.2;
+                    double y = position.y + config.offsetY() + Math.sin(progress * Math.PI) * 0.2;
                     double z = position.z + Math.cos(progress * Math.PI * 2) * 0.1;
-                    world.spawnParticles(config.type, x, y, z,
-                            1, config.offsetX, 0, config.offsetZ, config.speed);
+                    world.spawnParticles(config.type(), x, y, z,
+                            1, config.offsetX(), 0, config.offsetZ(), config.speed());
                 }
             }
             case "random" -> {
@@ -346,9 +365,9 @@ public class FeedbackManager {
                     double r = world.getRandom().nextDouble() * effectiveRadius;
                     double x = position.x + Math.cos(angle) * r;
                     double z = position.z + Math.sin(angle) * r;
-                    double y = position.y + config.offsetY + world.getRandom().nextDouble() * 0.3;
-                    world.spawnParticles(config.type, x, y, z,
-                            1, config.offsetX, config.offsetY, config.offsetZ, config.speed);
+                    double y = position.y + config.offsetY() + world.getRandom().nextDouble() * 0.3;
+                    world.spawnParticles(config.type(), x, y, z,
+                            1, config.offsetX(), config.offsetY(), config.offsetZ(), config.speed());
                 }
             }
             case "aura_radius_ground" -> {
@@ -357,9 +376,9 @@ public class FeedbackManager {
                     double r = Math.sqrt(world.getRandom().nextDouble()) * effectiveRadius;
                     double x = position.x + Math.cos(angle) * r;
                     double z = position.z + Math.sin(angle) * r;
-                    double y = position.y + config.offsetY + world.getRandom().nextDouble() * 0.1;
-                    world.spawnParticles(config.type, x, y, z,
-                            1, config.offsetX, 0.02, config.offsetZ, config.speed);
+                    double y = position.y + config.offsetY() + world.getRandom().nextDouble() * 0.1;
+                    world.spawnParticles(config.type(), x, y, z,
+                            1, config.offsetX(), 0.02, config.offsetZ(), config.speed());
                 }
             }
             case "aura_radius_edge" -> {
@@ -369,9 +388,9 @@ public class FeedbackManager {
                     double r = effectiveRadius + (world.getRandom().nextDouble() - 0.5) * 0.5;
                     double x = position.x + Math.cos(angle) * r;
                     double z = position.z + Math.sin(angle) * r;
-                    double y = position.y + config.offsetY + world.getRandom().nextDouble() * 0.2;
-                    world.spawnParticles(config.type, x, y, z,
-                            1, config.offsetX, config.offsetY, config.offsetZ, config.speed);
+                    double y = position.y + config.offsetY() + world.getRandom().nextDouble() * 0.2;
+                    world.spawnParticles(config.type(), x, y, z,
+                            1, config.offsetX(), config.offsetY(), config.offsetZ(), config.speed());
                 }
             }
             case "orbital_single" -> emitOrbitalSingle(config, position, world, sourceEntity);
@@ -379,8 +398,8 @@ public class FeedbackManager {
             case "orbital_triple" -> emitOrbitalTriple(config, position, world, sourceEntity);
             default -> {
                 // fallback to burst
-                world.spawnParticles(config.type, position.x, position.y + config.offsetY, position.z,
-                        overrideCount, config.offsetX, config.offsetY, config.offsetZ, config.speed);
+                world.spawnParticles(config.type(), position.x, position.y + config.offsetY(), position.z,
+                        overrideCount, config.offsetX(), config.offsetY(), config.offsetZ(), config.speed());
             }
         }
     }
@@ -389,13 +408,13 @@ public class FeedbackManager {
                                           ServerWorld world, Entity sourceEntity) {
         if (config == null || world == null || world.isClient() || position == null) return;
         double entitySizeMultiplier = 1.0;
-        if (config.adaptToEntitySize && sourceEntity != null) {
+        if (config.adaptToEntitySize() && sourceEntity != null) {
             entitySizeMultiplier = Math.max(0.5, Math.min(2.0, sourceEntity.getWidth()));
         }
 
-        double effectiveRadius = config.radius * entitySizeMultiplier;
+        double effectiveRadius = config.radius() * entitySizeMultiplier;
 
-        switch (config.pattern.toLowerCase()) {
+        switch (config.pattern().toLowerCase()) {
             case "circle" -> emitCirclePattern(config, position, world, effectiveRadius);
             case "burst" -> emitBurstPattern(config, position, world);
             case "line" -> emitLinePattern(config, position, world, effectiveRadius);
@@ -415,96 +434,96 @@ public class FeedbackManager {
     }
 
     private static void emitCirclePattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double radius) {
-        for (int i = 0; i < config.count; i++) {
-            double angle = (i / (double) config.count) * 2 * Math.PI;
+        for (int i = 0; i < config.count(); i++) {
+            double angle = (i / (double) config.count()) * 2 * Math.PI;
             double x = pos.x + Math.cos(angle) * radius;
             double z = pos.z + Math.sin(angle) * radius;
-            world.spawnParticles(config.type, x, pos.y + config.offsetY, z,
-                               1, config.offsetX, 0, config.offsetZ, config.speed);
+            world.spawnParticles(config.type(), x, pos.y + config.offsetY(), z,
+                               1, config.offsetX(), 0, config.offsetZ(), config.speed());
         }
     }
 
     private static void emitBurstPattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world) {
-        world.spawnParticles(config.type, pos.x, pos.y + config.offsetY, pos.z,
-                           config.count, config.offsetX, config.offsetY, config.offsetZ, config.speed);
+        world.spawnParticles(config.type(), pos.x, pos.y + config.offsetY(), pos.z,
+                           config.count(), config.offsetX(), config.offsetY(), config.offsetZ(), config.speed());
     }
 
     private static void emitLinePattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double length) {
-        for (int i = 0; i < config.count; i++) {
-            double progress = i / (double) (config.count - 1);
+        for (int i = 0; i < config.count(); i++) {
+            double progress = i / (double) (config.count() - 1);
             double x = pos.x + (progress - 0.5) * length;
-            world.spawnParticles(config.type, x, pos.y + config.offsetY, pos.z,
-                               1, config.offsetX, 0, config.offsetZ, config.speed);
+            world.spawnParticles(config.type(), x, pos.y + config.offsetY(), pos.z,
+                               1, config.offsetX(), 0, config.offsetZ(), config.speed());
         }
     }
 
     private static void emitAreaPattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double radius) {
-        for (int i = 0; i < config.count; i++) {
+        for (int i = 0; i < config.count(); i++) {
             double angle = world.getRandom().nextDouble() * 2 * Math.PI;
             double r = world.getRandom().nextDouble() * radius;
             double x = pos.x + Math.cos(angle) * r;
             double z = pos.z + Math.sin(angle) * r;
-            world.spawnParticles(config.type, x, pos.y + config.offsetY, z,
-                               1, config.offsetX, config.offsetY / 2, config.offsetZ, config.speed);
+            world.spawnParticles(config.type(), x, pos.y + config.offsetY(), z,
+                               1, config.offsetX(), config.offsetY() / 2, config.offsetZ(), config.speed());
         }
     }
 
     private static void emitSpiralPattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double radius) {
         double time = world.getTime() * 0.1;
-        for (int i = 0; i < config.count; i++) {
-            double angle = time + (i * Math.PI * 2 / config.count);
+        for (int i = 0; i < config.count(); i++) {
+            double angle = time + (i * Math.PI * 2 / config.count());
             double x = pos.x + Math.cos(angle) * radius;
             double z = pos.z + Math.sin(angle) * radius;
-            double y = pos.y + config.offsetY + Math.sin(angle) * 0.1;
-            world.spawnParticles(config.type, x, y, z,
-                               1, config.offsetX, 0, config.offsetZ, config.speed);
+            double y = pos.y + config.offsetY() + Math.sin(angle) * 0.1;
+            world.spawnParticles(config.type(), x, y, z,
+                               1, config.offsetX(), 0, config.offsetZ(), config.speed());
         }
     }
 
     private static void emitUpwardPattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world) {
-        for (int i = 0; i < config.count; i++) {
-            double offsetX = (world.getRandom().nextDouble() - 0.5) * config.offsetX * 2;
-            double offsetZ = (world.getRandom().nextDouble() - 0.5) * config.offsetZ * 2;
-            world.spawnParticles(config.type,
+        for (int i = 0; i < config.count(); i++) {
+            double offsetX = (world.getRandom().nextDouble() - 0.5) * config.offsetX() * 2;
+            double offsetZ = (world.getRandom().nextDouble() - 0.5) * config.offsetZ() * 2;
+            world.spawnParticles(config.type(),
                                pos.x + offsetX, pos.y - 0.2, pos.z + offsetZ,
-                               1, config.offsetX, 0.0, config.offsetZ, config.speed);
+                               1, config.offsetX(), 0.0, config.offsetZ(), config.speed());
         }
     }
 
     private static void emitPlusPattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double size) {
         // Horizontal line
-        world.spawnParticles(config.type, pos.x - size/2, pos.y + config.offsetY, pos.z,
-                           1, config.offsetX, 0, config.offsetZ, config.speed);
-        world.spawnParticles(config.type, pos.x + size/2, pos.y + config.offsetY, pos.z,
-                           1, config.offsetX, 0, config.offsetZ, config.speed);
+        world.spawnParticles(config.type(), pos.x - size/2, pos.y + config.offsetY(), pos.z,
+                           1, config.offsetX(), 0, config.offsetZ(), config.speed());
+        world.spawnParticles(config.type(), pos.x + size/2, pos.y + config.offsetY(), pos.z,
+                           1, config.offsetX(), 0, config.offsetZ(), config.speed());
         // Vertical line
-        world.spawnParticles(config.type, pos.x, pos.y + config.offsetY, pos.z - size/2,
-                           1, config.offsetX, 0, config.offsetZ, config.speed);
-        world.spawnParticles(config.type, pos.x, pos.y + config.offsetY, pos.z + size/2,
-                           1, config.offsetX, 0, config.offsetZ, config.speed);
+        world.spawnParticles(config.type(), pos.x, pos.y + config.offsetY(), pos.z - size/2,
+                           1, config.offsetX(), 0, config.offsetZ(), config.speed());
+        world.spawnParticles(config.type(), pos.x, pos.y + config.offsetY(), pos.z + size/2,
+                           1, config.offsetX(), 0, config.offsetZ(), config.speed());
     }
 
     private static void emitZPattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double size) {
         double time = world.getTime() * 0.05;
-        for (int i = 0; i < config.count; i++) {
-            double progress = (i / (double) config.count + time) % 1.0;
+        for (int i = 0; i < config.count(); i++) {
+            double progress = (i / (double) config.count() + time) % 1.0;
             double x = pos.x + (progress - 0.5) * size;
-            double y = pos.y + config.offsetY + Math.sin(progress * Math.PI) * 0.2;
+            double y = pos.y + config.offsetY() + Math.sin(progress * Math.PI) * 0.2;
             double z = pos.z + Math.cos(progress * Math.PI * 2) * 0.1;
-            world.spawnParticles(config.type, x, y, z,
-                               1, config.offsetX, 0, config.offsetZ, config.speed);
+            world.spawnParticles(config.type(), x, y, z,
+                               1, config.offsetX(), 0, config.offsetZ(), config.speed());
         }
     }
 
     private static void emitRandomPattern(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double radius) {
-        for (int i = 0; i < config.count; i++) {
+        for (int i = 0; i < config.count(); i++) {
             double angle = world.getRandom().nextDouble() * Math.PI * 2;
             double r = world.getRandom().nextDouble() * radius;
             double x = pos.x + Math.cos(angle) * r;
             double z = pos.z + Math.sin(angle) * r;
-            double y = pos.y + config.offsetY + world.getRandom().nextDouble() * 0.3;
-            world.spawnParticles(config.type, x, y, z,
-                               1, config.offsetX, config.offsetY, config.offsetZ, config.speed);
+            double y = pos.y + config.offsetY() + world.getRandom().nextDouble() * 0.3;
+            world.spawnParticles(config.type(), x, y, z,
+                               1, config.offsetX(), config.offsetY(), config.offsetZ(), config.speed());
         }
     }
 
@@ -513,7 +532,7 @@ public class FeedbackManager {
      * Perfect for showing regeneration areas, gathering zones, etc.
      */
     private static void emitAuraRadiusGround(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double radius) {
-        for (int i = 0; i < config.count; i++) {
+        for (int i = 0; i < config.count(); i++) {
             // Random positions within the circular area
             double angle = world.getRandom().nextDouble() * Math.PI * 2;
             double r = Math.sqrt(world.getRandom().nextDouble()) * radius; // Uniform distribution
@@ -521,10 +540,10 @@ public class FeedbackManager {
             double z = pos.z + Math.sin(angle) * r;
 
             // Ground-level particles with slight rise
-            double y = pos.y + config.offsetY + world.getRandom().nextDouble() * 0.1;
+            double y = pos.y + config.offsetY() + world.getRandom().nextDouble() * 0.1;
 
-            world.spawnParticles(config.type, x, y, z,
-                               1, config.offsetX, 0.02, config.offsetZ, config.speed);
+            world.spawnParticles(config.type(), x, y, z,
+                               1, config.offsetX(), 0.02, config.offsetZ(), config.speed());
         }
     }
 
@@ -533,18 +552,18 @@ public class FeedbackManager {
      * Perfect for showing ability borders, detection ranges, etc.
      */
     private static void emitAuraRadiusEdge(FeedbackConfig.ParticleConfig config, Vec3d pos, ServerWorld world, double radius) {
-        for (int i = 0; i < config.count; i++) {
+        for (int i = 0; i < config.count(); i++) {
             // Positions around the circumference with slight randomization
-            double baseAngle = (i / (double) config.count) * Math.PI * 2;
+            double baseAngle = (i / (double) config.count()) * Math.PI * 2;
             double angle = baseAngle + (world.getRandom().nextDouble() - 0.5) * 0.3; // ±0.15 radians variance
             double r = radius + (world.getRandom().nextDouble() - 0.5) * 0.5; // ±0.25 block variance
 
             double x = pos.x + Math.cos(angle) * r;
             double z = pos.z + Math.sin(angle) * r;
-            double y = pos.y + config.offsetY + world.getRandom().nextDouble() * 0.2;
+            double y = pos.y + config.offsetY() + world.getRandom().nextDouble() * 0.2;
 
-            world.spawnParticles(config.type, x, y, z,
-                               1, config.offsetX, config.offsetY, config.offsetZ, config.speed);
+            world.spawnParticles(config.type(), x, y, z,
+                               1, config.offsetX(), config.offsetY(), config.offsetZ(), config.speed());
         }
     }
 
@@ -685,15 +704,18 @@ public class FeedbackManager {
      * Useful for immediate cleanup without full shutdown.
      */
     public static void cancelFeedbackTasks() {
-        // Cancel all pending tasks
-        for (Map.Entry<String, ScheduledFuture<?>> entry : PENDING_TASKS.entrySet()) {
-            ScheduledFuture<?> future = entry.getValue();
-            if (future != null && !future.isDone()) {
-                try { future.cancel(false); } catch (Throwable ignored) {}
+        for (ScheduledFuture<?> future : PENDING_TASKS) {
+            if (future == null) {
+                continue;
+            }
+            try {
+                if (!future.isDone()) {
+                    future.cancel(false);
+                }
+            } catch (Throwable ignored) {
             }
         }
-        
-        // Clear the task tracking map
+
         PENDING_TASKS.clear();
     }
     
@@ -704,24 +726,62 @@ public class FeedbackManager {
     public static void cleanup() {
         boolean alreadyShuttingDown = IS_SHUTTING_DOWN.getAndSet(true);
 
-        // Always cancel outstanding tasks to avoid scheduling new work during shutdown.
         cancelFeedbackTasks();
 
-        // Halt the executor immediately instead of waiting on the server thread.
-        // This prevents deadlocks where queued tasks attempt to reschedule onto the
-        // main server thread while we are waiting for termination.
-        try { FEEDBACK_EXECUTOR.shutdownNow(); } catch (Throwable ignored) {}
-
-        // If another shutdown path already handled termination we are done.
-        if (alreadyShuttingDown) {
-            return;
+        ScheduledThreadPoolExecutor executor;
+        synchronized (EXECUTOR_LOCK) {
+            executor = feedbackExecutor;
+            feedbackExecutor = null;
         }
 
-        // Best-effort drain without blocking for an extended period.
-        try {
-            FEEDBACK_EXECUTOR.awaitTermination(100, TimeUnit.MILLISECONDS);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
+        if (executor != null) {
+            try {
+                executor.shutdownNow();
+            } catch (Throwable ignored) {
+            }
+
+            if (!alreadyShuttingDown) {
+                try {
+                    executor.awaitTermination(100, TimeUnit.MILLISECONDS);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                }
+            }
+        }
+
+        LAST_EMIT_TICK.clear();
+    }
+
+    private record FeedbackInvocation(FeedbackConfig.FeedbackEffect effect,
+                                      Vec3d position,
+                                      RegistryKey<World> worldKey,
+                                      @Nullable UUID sourceUuid) {
+
+        private FeedbackInvocation {
+            Objects.requireNonNull(effect, "effect");
+            Objects.requireNonNull(position, "position");
+            Objects.requireNonNull(worldKey, "worldKey");
+        }
+
+        private static FeedbackInvocation from(FeedbackConfig.FeedbackEffect effect,
+                                               Vec3d position,
+                                               ServerWorld world,
+                                               @Nullable Entity source) {
+            Objects.requireNonNull(world, "world");
+            UUID uuid = source != null ? source.getUuid() : null;
+            return new FeedbackInvocation(effect, position, world.getRegistryKey(), uuid);
+        }
+
+        private void dispatch(MinecraftServer server) {
+            if (server == null || server.isStopped()) {
+                return;
+            }
+            ServerWorld targetWorld = server.getWorld(worldKey);
+            if (targetWorld == null || targetWorld.isClient()) {
+                return;
+            }
+            Entity sourceEntity = sourceUuid != null ? targetWorld.getEntity(sourceUuid) : null;
+            executeImmediateFeedback(effect, position, targetWorld, sourceEntity);
         }
     }
 }
